--- a/themes/uoc/layouts/partials/header.html
+++ b/themes/uoc/layouts/partials/header.html
@@ -9,7 +9,7 @@
 				</div>
 				<div class="col-xs-10 col-md-8 col-lg-8"><span
 						class="ruler ruler--dynamic ruler--white w100-inline-block"></span>
-					<p class="nav-menu-title title-more-size"> {{ T "uoc_ri"}}</p><span
+					<h1 class="nav-menu-title title-more-size"> {{ T "uoc_ri"}}</h1><span
 						class="ruler ruler--dynamic ruler--white w100-inline-block"></span>
 				</div>
 				<div class="col-md-2 hidden-xs hidden-md"><span
